tennessee/memphis/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: memphis-gateway
  namespace: memphis
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: memphis-virtualservice
  namespace: memphis
spec:
  hosts:
  - "*"
  gateways:
  - memphis-gateway
  http:
  - match:
    - uri:
        exact: /memphis
    - uri:
        exact: /memphis1
    - uri:
        prefix: /memphis2
    route:
    - destination:
        host: frontend
        port:
          number: 80
